fix: stretchin validate

--- a/blocks/popup/__text-error/popup__text-error.css
+++ b/blocks/popup/__text-error/popup__text-error.css
@@ -3,5 +3,5 @@
   font-size: 12px;
   line-height: 14px;
   display: none;
-  margin-top: 5px;
+  position: absolute;
 }
